2010-06-24  Tobias Burnus  <burnus@net-b.de>

PR fortran/44614
        * decl.c (variable_decl): Fix IMPORT diagnostic for CLASS.

2010-06-24  Tobias Burnus  <burnus@net-b.de>

        PR fortran/44614
        * gfortran.dg/import8.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@161310 138bc75d-0d04-0410-961f-82ee72b054a4